--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import App from '../components/App.jsx';
+import Search from '../components/Search.jsx';
 const someProps = {
 	count: 0,
 };
 ---
-	<App {...someProps} client:visible>
-				<h1>ChainList-2</h1>
-	</Counter>
+	<Search {...someProps} client:visible>
+				<h1>ChainList-Search</h1>
+	</Search>
